# rde-mvp

./: README.md  pyproject.toml
.github/workflows/: ci.yml
data/examples/: pems_mapping_example.json
data/regpacks/: eu7_demo.json
data/rules/: demo_rules.json
data/samples/: ecu_demo.csv  gps_demo.csv  pems_demo.csv
docs/rules/: README.md  eu7_ld.yaml
pint/: __init__.py  errors.py
reports/: sample.json
scripts/: make_demo_trip.py
src/: __init__.py  main.py
src/app/: __init__.py
src/app/analysis/: charts.py  metrics.py  rules.py
src/app/api/: __init__.py  main.py
src/app/api/routes/: report.py
src/app/data/: __init__.py  schemas.py  utils.py
src/app/data/analysis/: __init__.py  engine.py  rules.py
src/app/data/fusion/: __init__.py  engine.py  specs.py  time_alignment.py
src/app/data/ingestion/: __init__.py  ecu_reader.py  gps_reader.py  pems_reader.py
src/app/data/regulation/: __init__.py  evaluation.py  pack.py
src/app/quality/: __init__.py  diagnostics.py
src/app/regulation/: __init__.py  eu7ld_un168_limits.py  pack.py
src/app/reporting/: __init__.py  archive.py  eu7ld_report.py  html.py  pdf.py  schemas.py
src/app/rules/: __init__.py  engine.py  eu7_ld.py
src/app/schemas/: __init__.py  canonical.py
src/app/ui/: __init__.py  response_utils.py  responses.py  server.py
src/app/utils/: __init__.py  mappings.py  payload.py  time.py  units.py
tests/: test_analysis.py  test_diagnostics.py  test_ecu_reader.py  test_eu7_ld_rules.py  test_fusion.py  test_gps_reader.py  test_health.py  test_pems_reader.py  test_regulation.py  test_report_api.py  test_time_alignment.py  test_time_utils.py  test_ui.py
(+32 files in other folders)
