[tool.poetry]
name = "rde-mvp"
version = "0.1.0"
description = "MVP for RDE homologation app"
authors = ["RDE Team <noreply@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
httpx = "^0.27.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
gpxpy = "^1.6.2"
pynmea2 = "^1.19.0"
pint = "^0.23"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
